fixup! WIP: debug cache misses in pipeline

--- a/.github/workflows/nix-github-actions.yml
+++ b/.github/workflows/nix-github-actions.yml
@@ -14,5 +14,4 @@ jobs:
       - uses: cachix/cachix-action@v16
         with:
           name: pcp
-      # - run: nix config show
-      - run: nix build -L ".#pcp" --dry-run
+      - run: nix build -L ".#pcp"
