ci: push build artifacts to cachix

--- a/.github/workflows/nix-github-actions.yml
+++ b/.github/workflows/nix-github-actions.yml
@@ -14,4 +14,5 @@ jobs:
       - uses: cachix/cachix-action@v16
         with:
           name: pcp
+          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
       - run: nix build -L ".#pcp"
