ci: put together a build matrix for GH actions

--- a/.github/workflows/nix-github-actions.yml
+++ b/.github/workflows/nix-github-actions.yml
@@ -6,8 +6,26 @@ on:
   push:
 
 jobs:
-  nix-build:
+  nix-matrix:
     runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - uses: actions/checkout@v5
+      - uses: cachix/install-nix-action@v31
+      - id: set-matrix
+        name: Generate Nix Matrix
+        run: |
+          set -Eeu
+          matrix="$(nix eval --json '.#githubActions.matrix')"
+          echo "matrix=$matrix" >> "$GITHUB_OUTPUT"
+
+  nix-build:
+    name: ${{ matrix.name }} (${{ matrix.system }})
+    needs: nix-matrix
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix: ${{fromJSON(needs.nix-matrix.outputs.matrix)}}
     steps:
       - uses: actions/checkout@v5
       - uses: wimpysworld/nothing-but-nix@main
@@ -17,5 +35,6 @@ jobs:
           name: pcp
           authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
       - run: |
+          nix build -L '.#${{ matrix.attr }}'
           nix build -L ".#pcp"
           cachix push pcp result
