--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ torch==2.3.0
 -f https://github.com/llvm/torch-mlir-release/releases/expanded_assets/dev-wheels
 torch-mlir
 wandb>=0.16.0
+transformers
+accelerate
+sentencepiece
