--- a/.github/workflows/nix-github-actions.yml
+++ b/.github/workflows/nix-github-actions.yml
@@ -1,5 +1,5 @@
 ---
-name: "Test"
+name: "Build pcp"
 
 on:
   pull_request:
@@ -16,4 +16,6 @@ jobs:
         with:
           name: pcp
           authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
-      - run: nix build -L ".#pcp"
+      - run: |
+          nix build -L ".#pcp"
+          cachix push pcp result
