--- a/.github/workflows/nix-github-actions.yml
+++ b/.github/workflows/nix-github-actions.yml
@@ -25,10 +25,15 @@ jobs:
     needs: nix-matrix
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix: ${{fromJSON(needs.nix-matrix.outputs.matrix)}}
     steps:
       - uses: actions/checkout@v5
-      - uses: wimpysworld/nothing-but-nix@main
+
+      - name: Free Disk Space (Ubuntu Only)
+        if: runner.os == 'Linux'
+        uses: wimpysworld/nothing-but-nix@main
+
       - uses: cachix/install-nix-action@v31
       - uses: cachix/cachix-action@v16
         with:
