--- a/.github/workflows/nix-github-actions.yml
+++ b/.github/workflows/nix-github-actions.yml
@@ -6,27 +6,25 @@ on:
   push:
 
 jobs:
-  nix-matrix:
-    runs-on: ubuntu-latest
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
-    steps:
-      - uses: actions/checkout@v5
-      - uses: cachix/install-nix-action@v31
-      - id: set-matrix
-        name: Generate Nix Matrix
-        run: |
-          set -Eeu
-          matrix="$(nix eval --json '.#githubActions.matrix')"
-          echo "matrix=$matrix" >> "$GITHUB_OUTPUT"
-
-  nix-build:
-    name: ${{ matrix.name }} (${{ matrix.system }})
-    needs: nix-matrix
+  build-and-publish-on-cachix:
+    name: build (${{ matrix.system }})
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
-      matrix: ${{fromJSON(needs.nix-matrix.outputs.matrix)}}
+      matrix:
+        include:
+          - system: aarch64-darwin
+            os: macos-15
+
+          - system: aarch64-linux
+            os: ubuntu-24.04-arm
+
+          - system: x86_64-darwin
+            os: macos-15-intel
+
+          - system: x86_64-linux
+            os: ubuntu-24.04
+
     steps:
       - uses: actions/checkout@v5
 
@@ -40,6 +38,5 @@ jobs:
           name: pcp
           authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
       - run: |
-          nix build -L '.#${{ matrix.attr }}'
           nix build -L ".#pcp"
           cachix push pcp result
